--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="quiltfo-nav">
         <section class="quiltfo-nav-left">
-        <div class="quiltfo-nav-item">
+            <div class="quiltfo-nav-item"></div>
             <h1 class="quiltfo-logo">The Quiltfo</h1>
         </div>
         </section>
@@ -21,8 +21,13 @@
             <p class ="quiltfo-nav-item clickable">Contact</p>
         </section>
     </header>
-    <section class="hero about">
-        <p>Test</p>
+    <section class="hero" id="about-home">
+        <div class="about-aside">
+            <p>Megan Smith is an artist specializing ing in vintage inspired modern quilting. "Quiltfo" combines her love of quilting with her passion of sharing information.</p>
+        <button id="about-button">
+            <p>Learn More</p>
+        </button>
+    </div>
     </section>
 </body>
 </html>
