Commit z-index in nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="quiltfo-nav">
         <section class="quiltfo-nav-left">
-            <div class="quiltfo-nav-item"></div>
+            <div class="quiltfo-nav-item">
             <h1 class="quiltfo-logo">The Quiltfo</h1>
         </div>
         </section>
@@ -21,7 +21,7 @@
             <p class ="quiltfo-nav-item clickable">Contact</p>
         </section>
     </header>
-    <section class="hero" id="about-home">
+     <section class="hero" id="about-home">
         <div class="about-aside">
             <p>Megan Smith is an artist specializing ing in vintage inspired modern quilting. "Quiltfo" combines her love of quilting with her passion of sharing information.</p>
         <button id="about-button">
