--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     </header>
      <section class="hero" id="about-home">
         <div class="about-aside">
-            <p>Megan Smith is an artist specializing ing in vintage inspired modern quilting. "Quiltfo" combines her love of quilting with her passion of sharing information.</p>
+            <p>Megan Smith is an artist specializing in vintage inspired modern quilting. "Quiltfo" combines her love of quilting with her passion of sharing information about the art.</p>
         <button id="about-button">
             <p>Learn More</p>
         </button>
     </div>
+    </section>
+    <section class="hero" id="gallery-home">
+        <p>text</p>
     </section>
 </body>
 </html>
