Commit gallery grid layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         </section>
         <section class="quiltfo-nav-right">
-            <p class ="quiltfo-nav-item clickable">About</p>
+            <p class ="quiltfo-nav-item clickable"><a href="index.html">Home</a></p>
+            <p class ="quiltfo-nav-item clickable"><a href="about.html">About</a></p>
             <p class ="quiltfo-nav-item clickable">Gallery</p>
             <p class ="quiltfo-nav-item clickable">Blog</p>
             <p class ="quiltfo-nav-item clickable">Contact</p>
@@ -30,7 +31,18 @@
     </div>
     </section>
     <section class="hero" id="gallery-home">
-        <p>text</p>
+        <h3>Gallery</h3>
+        <section class="gallery-home-container">
+            <div class="gallery-quilt-container">
+                <p>Improv</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <p>Gnomes</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <p>Sunset Strip</p>
+            </div>
+        </section>
     </section>
 </body>
 </html>
