--- a/index.html
+++ b/index.html
@@ -31,18 +31,44 @@
     </div>
     </section>
     <section class="hero" id="gallery-home">
-        <h3>Gallery</h3>
+        <h2>Gallery</h2>
         <section class="gallery-home-container">
             <div class="gallery-quilt-container">
-                <p>Improv</p>
+                <div class="gallery-quilt-image" id="sunset-strip-i"></div>
+                <p class="gallery-quilt-text">Sunset Strip I, 2024</p>
             </div>
             <div class="gallery-quilt-container">
-                <p>Gnomes</p>
+                <div class="gallery-quilt-image" id="southwest-improv"></div>
+                <p class="gallery-quilt-text">Southwest Improv, 2023</p>
             </div>
             <div class="gallery-quilt-container">
-                <p>Sunset Strip</p>
+                <div class="gallery-quilt-image" id="scrappy-stars"></div>
+                <p class="gallery-quilt-text">Scrappy Stars, 2023</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <div class="gallery-quilt-image" id="color-study"></div>
+                <p class="gallery-quilt-text">Color Study, 2023</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <div class="gallery-quilt-image" id="first-rodeo"></div>
+                <p class="gallery-quilt-text">First Rodeo, 2022</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <div class="gallery-quilt-image" id="sunset-strip"></div>
+                <p class="gallery-quilt-text">Sunset Strip, 2022</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <div class="gallery-quilt-image" id="true-scrappy"></div>
+                <p class="gallery-quilt-text">True Scrappy, 2020</p>
+            </div>
+            <div class="gallery-quilt-container">
+                <div class="gallery-quilt-image" id="desert-rat""></div>
+                <p class="gallery-quilt-text">Desert Rat, 2020</p>
             </div>
         </section>
+        <button id="gallery-button">
+            <p>See More</p>
+        </button>
     </section>
 </body>
 </html>
