--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <script src="script.js"></script>
     <title>The Quiltfo</title>
 </head>
 <body>
@@ -19,14 +19,14 @@
             <p class ="quiltfo-nav-item clickable"><a href="about.html">About</a></p>
             <p class ="quiltfo-nav-item clickable">Gallery</p>
             <p class ="quiltfo-nav-item clickable">Blog</p>
-            <p class ="quiltfo-nav-item clickable">Contact</p>
+            <p class ="quiltfo-nav-item clickable"><a href="contact.html">Contact</a></p>
         </section>
     </header>
      <section class="hero" id="about-home">
         <div class="about-aside">
             <p>Megan Smith is an artist specializing in vintage inspired modern quilting. "Quiltfo" combines her love of quilting with her passion of sharing information about the art.</p>
         <button id="about-button">
-            <p>Learn More</p>
+            <p><a href="about.html">Learn More</a></p>
         </button>
     </div>
     </section>
@@ -69,6 +69,9 @@
         <button id="gallery-button">
             <p>See More</p>
         </button>
-    </section>
+        </section>
 </body>
+<footer>
+    <p class="footer-text">The Quiltfo &copy;</p>
+</footer>
 </html>
